--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /target/
 pom.properties
 target/m2e-wtp/web-resources/META-INF/maven/com.luv2code/spring-security-demo/pom.properties
+target/m2e-wtp/web-resources/META-INF/maven/com.luv2code/spring-security-demo/pom.properties
